# plainnews

./: .gitignore  Makefile  README.md  pyproject.toml
src/: cli.py  settings.py
src/commands/: rewrite.py
src/env/local/: .env
src/lib/: agent.py  tools.py  ui.py
src/plainnews/: __main__.py  cli.py
src/plainnews/commands/: rewrite.py
src/plainnews/lib/: agent.py  prompts.py  tools.py
tests/: test_cli.py  test_prompts_settings.py  test_tools.py
